- fix github action 1

--- a/.github/workflows/sync_my_structure_mason.yml
+++ b/.github/workflows/sync_my_structure_mason.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Pull latest changes from master
         run: |
-          git pull origin master
+          git pull
 
       - name: Sync lib/core into brick
         run: |
