--- a/.github/workflows/sync_my_structure_mason.yml
+++ b/.github/workflows/sync_my_structure_mason.yml
@@ -15,16 +15,10 @@ jobs:
           ref: my_structure_mason
           token: ${{ secrets.ACTIONS_PUSH_TOKEN }}
 
-      - name: Set up Rust
-        uses: actions/setup-rust@v1
-        with:
-          rust-version: stable
-
       - name: Sync core from lib/core
         run: |
           rm -rf bricks/core_brick/__brick__/core
-          cp -r bricks/core_brick/__brick__/core ../lib/core
-          cp -r ../lib/core bricks/core_brick/__brick__/core
+          cp -r lib/core bricks/core_brick/__brick__/core
 
       - name: Commit and push if changes exist
         env:
